--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ display: flex;
   margin: 20px;
   font: 16px 'Open Sans', sans-serif;
   flex-direction: column;
+  background-color: #E5E5E5;
 }
 
 .gist .blob-code-inner{ font-size:15px !important; 	}
@@ -18,6 +19,13 @@ display: flex;
 	display: flex;
 	justify-content:space-around;
 }
+.snippet3{
+	display: flex;
+	padding: 20px;
+}
 .header{
+	text-align: center;
+}
+.footer{
 	text-align: center;
 }
